<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ai_reply">Reply</string>
    <string name="ai_improve">Improve</string>
    <string name="ai_grammar">Grammar</string>
    <string name="ai_translate">Translate</string>
    <string name="ai_auto_text">Auto Text</string>
    <string name="auto_text_add">Add Auto Text</string>
    <string name="auto_text_shortcut">Shortcut</string>
    <string name="auto_text_message">Messages</string>
    <string name="auto_text_list_title">Auto Text</string>
    <string name="show_hide_action_strip">Show or hide action strip</string>
    <string name="ai_prompt">Prompt</string>
    <string name="ai_templates">Templates</string>
    <string name="ai_clipboard">Clipboard</string>
    <string name="ai_emoji">Emoji</string>
    <string name="english_ime_name" translatable="false">Lancar</string>
    <string name="spell_checker_service_name">Lancar Spell Checker</string>
    <string name="ime_settings">Lancar Settings</string>
    <string name="android_spell_checker_settings">Lancar Spell Checker Settings</string>
    <string name="english_ime_input_options">Input options</string>
    <string name="use_contacts_for_spellchecking_option_title">Look up contact names</string>
    <string name="use_contacts_for_spellchecking_option_summary">Spell checker uses entries from your contact list</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="settings_screen_preferences">Preferences</string>
    <string name="settings_screen_accounts">Accounts &amp; Privacy</string>
    <string name="settings_screen_appearance">Appearance &amp; Layouts</string>
    <string name="settings_screen_gesture">Gesture Typing</string>
    <string name="settings_screen_correction">Text correction</string>
    <string name="settings_screen_advanced">Advanced</string>
    <string name="settings_screen_theme">Theme</string>
    <string name="settings_category_input">Input</string>
    <string name="settings_category_additional_keys">Additional keys</string>
    <string name="settings_category_clipboard_history">Clipboard history</string>
    <string name="settings_category_correction">Corrections</string>
    <string name="settings_category_suggestions">Suggestions</string>
    <string name="settings_category_experimental">Experimental</string>
    <string name="settings_category_miscellaneous">Miscellaneous</string>
    <string name="enable_split_keyboard">Enable split keyboard</string>
    <string name="include_other_imes_in_language_switch_list">Switch to other input methods</string>
    <string name="include_other_imes_in_language_switch_list_summary">Language switch key covers other input methods too</string>
    <string name="show_language_switch_key">Language switch key</string>
    <string name="show_language_switch_key_summary">Show when multiple input languages are enabled</string>
    <string name="show_emoji_key">Emoji key</string>
    <string name="key_preview_popup_dismiss_delay">Key popup dismiss delay</string>
    <string name="key_preview_popup_dismiss_no_delay">No delay</string>
    <string name="key_preview_popup_dismiss_default_delay">Default</string>
    <string name="abbreviation_unit_milliseconds"><xliff:g id="MILLISECONDS">%s</xliff:g>ms</string>
    <string name="abbreviation_unit_minutes"><xliff:g id="MINUTES">%s</xliff:g>min.</string>
    <string name="settings_system_default">System default</string>
    <string name="settings_no_limit">No limit</string>
    <string name="use_contacts_dict">Suggest Contact names</string>
    <string name="use_contacts_dict_summary">Use contact names for suggestions and corrections</string>
    <string name="use_personalized_dicts">Personalized suggestions</string>
    <string name="enable_metrics_logging">"Improve <xliff:g id="APPLICATION_NAME" example="Android Keyboard">%s</xliff:g>"</string>
    <string name="use_double_space_period">Double-space period</string>
    <string name="use_double_space_period_summary">Double tap on spacebar inserts a period followed by a space</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="edit_personal_dictionary">Personal dictionary</string>
    <string name="configure_dictionaries_title">Add-on dictionaries</string>
    <string name="main_dictionary">Main dictionary</string>
    <string name="prefs_show_suggestions">Show correction suggestions</string>
    <string name="prefs_show_suggestions_summary">Display suggested words while typing</string>
    <string name="prefs_block_potentially_offensive_title">Block offensive words</string>
    <string name="prefs_block_potentially_offensive_summary">Do not suggest potentially offensive words</string>
    <string name="auto_correction">Auto-correction</string>
    <string name="auto_correction_summary">Spacebar and punctuation automatically correct mistyped words</string>
    <string name="auto_correction_confidence">Auto-correction confidence</string>
    <string name="auto_correction_threshold_mode_off">Off</string>
    <string name="auto_correction_threshold_mode_modest">Modest</string>
    <string name="auto_correction_threshold_mode_aggressive">Aggressive</string>
    <string name="auto_correction_threshold_mode_very_aggressive">Very aggressive</string>
    <string name="bigram_prediction">Next-word suggestions</string>
    <string name="bigram_prediction_summary">Use the previous word in making suggestions</string>
    <string name="gesture_input">Enable gesture typing</string>
    <string name="gesture_input_summary">Input a word by sliding through the letters</string>
    <string name="gesture_preview_trail">Show gesture trail</string>
    <string name="gesture_floating_preview_text">Dynamic floating preview</string>
    <string name="gesture_floating_preview_text_summary">See the suggested word while gesturing</string>
    <string name="gesture_space_aware">Phrase gesture</string>
    <string name="gesture_space_aware_summary">Input spaces during gestures by gliding to the space key</string>
    <string name="voice_input">Voice input key</string>
    <string name="voice_input_disabled_summary">No voice input methods enabled. Check Languages &amp; input settings.</string>
    <string name="show_clipboard_key">Clipboard key</string>
    <string name="enable_clipboard_history">Enable clipboard history</string>
    <string name="enable_clipboard_history_summary">If disabled, clipboard key will paste clipboard content if any</string>
    <string name="clipboard_history_retention_time">History retention time</string>
    <string name="delete_swipe">Delete swipe</string>
    <string name="delete_swipe_summary">Perform a swipe from the delete key to select and remove bigger portions of text at once</string>
    <string name="space_trackpad">Space bar trackpad</string>
    <string name="space_trackpad_summary">Swipe on the spacebar to move the cursor</string>
    <string name="autospace_after_punctuation">Autospace after punctuation</string>
    <string name="autospace_after_punctuation_summary">Automatically insert space after punctuation when typing a new word</string>
    <string name="prefs_force_incognito_mode">Force incognito mode</string>
    <string name="prefs_force_incognito_mode_summary">Disable learning of new words</string>
    <string name="more_keys_strip_description">More keys</string>
    <string name="configure_input_method">Configure input methods</string>
    <string name="language_selection_title">Languages</string>
    <string name="help_and_feedback">Help &amp; feedback</string>
    <string name="select_language">Languages</string>
    <string name="hint_add_to_dictionary">Tap again to save</string>
    <string name="hint_add_to_dictionary_without_word">Tap here to save</string>
    <string name="has_dictionary">Dictionary available</string>
    <string name="keyboard_layout">Keyboard theme</string>
    <string name="number_row">Number row</string>
    <string name="number_row_summary">Always show number row</string>
    <string name="show_hints">Show key hints</string>
    <string name="show_hints_summary">Show long-press hints</string>
    <string name="prefs_long_press_keyboard_to_change_lang">Change input method with space key</string>
    <string name="prefs_long_press_keyboard_to_change_lang_summary">Long pressing space key will prompt input method selection menu</string>
    <string name="prefs_resize_keyboard">Enable keyboard resizing</string>
    <string name="prefs_keyboard_height_scale">Keyboard height scale</string>
    <string name="switch_accounts">Switch accounts</string>
    <string name="no_accounts_selected">No accounts selected</string>
    <string name="account_selected">Currently using <xliff:g id="EMAIL_ADDRESS" example="someone@example.com">%1$s</xliff:g></string>
    <string name="account_select_ok">OK</string>
    <string name="account_select_cancel">Cancel</string>
    <string name="account_select_sign_out">Sign out</string>
    <string name="account_select_title">Select an account to use</string>
    <string name="subtype_en_GB">English (UK)</string>
    <string name="subtype_en_US">English (US)</string>
    <string name="subtype_es_US">Spanish (US)</string>
    <string name="subtype_hi_ZZ">Hinglish</string>
    <string name="subtype_sr_ZZ">Serbian (Latin)</string>
    <string name="subtype_with_layout_en_GB">English (UK) (<xliff:g id="KEYBOARD_LAYOUT" example="QWERTY">%s</xliff:g>)</string>
    <string name="subtype_with_layout_en_US">English (US) (<xliff:g id="KEYBOARD_LAYOUT" example="QWERTY">%s</xliff:g>)</string>
    <string name="subtype_with_layout_es_US">Spanish (US) (<xliff:g id="KEYBOARD_LAYOUT" example="QWERTY">%s</xliff:g>)</string>
    <string name="subtype_with_layout_hi_ZZ">Hinglish (<xliff:g id="KEYBOARD_LAYOUT" example="QWERTY">%s</xliff:g>)</string>
    <string name="subtype_with_layout_sr_ZZ">Serbian (<xliff:g id="KEYBOARD_LAYOUT" example="QWERTY">%s</xliff:g>)</string>
    <string name="subtype_generic_traditional"><xliff:g id="LANGUAGE_NAME" example="Nepali">%s</xliff:g> (Traditional)</string>
    <string name="subtype_with_layout_bn_BD"><xliff:g id="LANGUAGE_NAME" example="Bangla">%s</xliff:g> (Akkhor)</string>
    <string name="subtype_generic_compact"><xliff:g id="LANGUAGE_NAME" example="Hindi">%s</xliff:g> (Compact)</string>
    <string name="subtype_no_language">No language (Alphabet)</string>
    <string name="subtype_no_language_qwerty">Alphabet (QWERTY)</string>
    <string name="subtype_no_language_qwertz">Alphabet (QWERTZ)</string>
    <string name="subtype_no_language_azerty">Alphabet (AZERTY)</string>
    <string name="subtype_no_language_dvorak">Alphabet (Dvorak)</string>
    <string name="subtype_no_language_colemak">Alphabet (Colemak)</string>
    <string name="subtype_no_language_colemak_dh">Alphabet (Colemak Mod-DH)</string>
    <string name="subtype_no_language_workman">Alphabet (Workman)</string>
    <string name="subtype_no_language_pcqwerty">Alphabet (PC)</string>
    <string name="subtype_emoji">Emoji</string>
    <string name="keyboard_theme">Keyboard theme</string>
    <string name="custom_input_styles_title">Custom input styles</string>
    <string name="add_style">Add style</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="subtype_locale">Language</string>
    <string name="keyboard_layout_set">Layout</string>
    <string name="custom_input_style_note_message">"Your custom input style needs to be enabled before you start using it. Do you want to enable it now?"</string>
    <string name="enable">Enable</string>
    <string name="not_now">Not now</string>
    <string name="cancel">Cancel</string>
</resources>