<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#66000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical"
        android:background="#1E1E1E"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_text_add"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_text_shortcut"
            android:textColor="#B3FFFFFF"/>
        <EditText
            android:id="@+id/et_shortcut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="hi"
            android:textColor="@android:color/white"
            android:textColorHint="#66FFFFFF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_text_message"
            android:layout_marginTop="12dp"
            android:textColor="#B3FFFFFF"/>
        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Hi, how are you?"
            android:textColor="@android:color/white"
            android:textColorHint="#66FFFFFF"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="16dp">
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/cancel"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/auto_text_add"
                android:textAllCaps="false"
                android:layout_marginLeft="12dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>


